--- a/style.css
+++ b/style.css
@@ -724,15 +724,16 @@ section h2, section p, section li {
 }*/
 
     #particles-background {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        z-index: -1
-		  pointer-events: none;      
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  z-index: -10;
+  pointer-events: none;      
   background: transparent;
     }
+
 
 
 
